--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,25 +46,15 @@ jobs:
         run: |
           mkdir -p preprocessing/clothes_price_prediction_preprocessing
           python preprocessing/automate_farisghina.py 
-      # Run as a mlflow project
-      # - name: Run mlflow project
-      #   run: |
-      #     mlflow run Project --env-manager=local 
 
-      # - name: Commit and push processed files
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GH_PAT }}  # Mengambil token dari GitHub Secrets
-      #   run: |
-      #     # git config user.name "farisgp"
-      #     # git config user.email "farisghina51@gmail.com"
-      #     # git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/farisgp/Eksperimen_SML_FarisGhina.git
-      #     # git add preprocessing/clothes_price_prediction_preprocessing.csv
-      #     # git commit -m "Update preprocessed dataset" || echo "No changes to commit"
-      #     # git push origin main
-      #     # git config --global user.name 'github-actions[bot]'
-      #     # git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      #     # git add preprocessing/clothes_price_prediction_preprocessing
-      #     # git commit -m "Add preprocessing output"
-      #     # git push origin HEAD:${{ github.ref }}
+      - name: Commit and push processed files
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Mengambil token dari GitHub Secrets
+        run: |
+          git config --global user.name ${{ secrets.username }}
+          git config --global user.email ${{ secrets.email }}
+          git add preprocessing/clothes_price_prediction_preprocessing.CSV
+          git commit -m "Add preprocessing output"
+          git push origin main
 
       
