--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           git config --global user.name ${{ secrets.username }}
           git config --global user.email ${{ secrets.email }}
-          git add preprocessing/clothes_price_prediction_preprocessing.CSV
+          git add preprocessing/clothes_price_prediction_preprocessing.csv
           git commit -m "Add preprocessing output"
           git push origin main
 
