--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Mengambil token dari GitHub Secrets
         run: |
-          git config --local user.name ${{ secrets.username }}
-          git config --local user.email ${{ secrets.email }}
-          git add preprocessing/clothes_price_prediction_preprocessing.csv
+          git config --global user.name ${{ secrets.username }}
+          git config --global user.email ${{ secrets.email }}
+          git add ../preprocessing/clothes_price_prediction_preprocessing.csv
           git commit -m "Add preprocessing output"
           git push origin main
 
