--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,8 @@ jobs:
         run: |
           git config --global user.name ${{ secrets.username }}
           git config --global user.email ${{ secrets.email }}
-          git add ./preprocessing/clothes_price_prediction_preprocessing.csv
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git add preprocessing/clothes_price_prediction_preprocessing.csv
           git commit -m "Add preprocessing output"
           git push origin main
 
