--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,10 @@ jobs:
           git config --global user.name ${{ secrets.username }}
           git config --global user.email ${{ secrets.email }}
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git add preprocessing/clothes_price_prediction_preprocessing.csv
+          git add preprocessing/X_train.csv
+          git add preprocessing/X_test.csv
+          git add preprocessing/y_train.csv
+          git add preprocessing/y_test.csv
           git commit -m "Add preprocessing output"
           git push origin main
 
