--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,10 +52,7 @@ jobs:
         run: |
           git config --global user.name ${{ secrets.username }}
           git config --global user.email ${{ secrets.email }}
-          git add preprocessing/X_train.csv
-          git add preprocessing/X_test.csv
-          git add preprocessing/y_train.csv
-          git add preprocessing/y_test.csv
+          git add preprocessing/clothes_dataset_preprocessed.csv
           git commit -m "Add preprocessing output"
           git push origin main
 
